syntax = "proto2";

package com.distkv.dst.rpc.protobuf;

import "common_pb.proto";

option java_package="com.distkv.dst.rpc.protobuf.generated";
option java_outer_classname = "SortedListProtocol";
option cc_generic_services = true;

message SortedListEntity {
    required int32 score = 1;
    required string member = 2;
}

message PutRequest {
    required string key = 1;
    repeated SortedListEntity list = 2;
}

message PutResponse {
    required Status status = 1;
}

message TopRequest {
    required string key = 1;
    required uint32 count = 2;
}

message TopResponse {
    required Status status = 1;
    repeated SortedListEntity list = 2;
}

message IncrScoreRequest {
    required string key = 1;
    required string member = 2;
    required int32 delta = 3;
}

message IncrScoreResponse {
    required Status status = 1;
}

message PutMemberRequest {
    required string key = 1;
    required int32 score = 2;
    required string member = 3;
}

message PutMemberResponse {
    required Status status = 1;
}

message RemoveMemberRequest {
    required string key = 1;
    required string member = 2;
}

message RemoveMemberResponse {
    required Status status = 1;
}

message GetMemberRequest {
    required string key = 1;
    required string member = 2;
}

message GetMemberResponse {
    required Status status = 1;
    required SortedListEntity entity = 2;
    required uint32 count = 3;
}

service DstListService {
    rpc put (PutRequest) returns (PutResponse);
    rpc top (TopRequest) returns (TopResponse);
    rpc incrItem (IncrScoreRequest) returns (IncrScoreResponse);
    rpc putItem (PutMemberRequest) returns (PutMemberResponse);
    rpc removeItem (RemoveMemberRequest) returns (RemoveMemberResponse);
    rpc getItem (GetMemberRequest) returns (GetMemberResponse);
    rpc drop(DropRequest) returns (DropResponse);
}
